--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-		<title>Lambda Movie Selector</title>
+		<title>Netflix Clone</title>
+		<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
